--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   uni_links: ^0.4.0
   mobx: ^2.0.0-nullsafety.2
   flutter_mobx: ^2.0.0-nullsafety.0
-  flutter_inapp_purchase: ^4.0.0 
+  flutter_inapp_purchase: ^4.0.0
   flutter_widget_from_html_core: ^0.6.0-rc.2021030401
   flutter_date_pickers: ^0.2.0
   device_info: ^2.0.0
@@ -61,6 +61,7 @@ dependencies:
   quick_actions: ^0.5.0
   image_picker: ^0.7.2
   intl: ^0.17.0
+  intl_utils: ^2.1.0
   extended_nested_scroll_view: ^3.0.0
   quiver: ^3.0.0
   image: ^3.0.1
@@ -83,17 +84,13 @@ dev_dependencies:
   build_runner: ^1.11.5
   mobx_codegen:
     git:
-       url: https://github.com/mobxjs/mobx.dart
-       path: mobx_codegen
-       ref: null_safety
+      url: https://github.com/mobxjs/mobx.dart
+      path: mobx_codegen
+      ref: null_safety
   json_serializable: ^4.0.2
-
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -120,19 +117,17 @@ flutter:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-     - family: iconfont
-       fonts:
-         - asset: assets/fonts/iconfont.ttf
+    - family: iconfont
+      fonts:
+        - asset: assets/fonts/iconfont.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
@@ -142,3 +137,5 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
   generate: true
+flutter_intl:
+  enabled: true
