--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -12,10 +12,10 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
-        java-version:'12.x'
+        java-version: '12'
     - uses: subosito/flutter-action@v1.4.0
       with:
-        flutter-version:'2.0.3'
+        flutter-version: '2.0.3'
     - name: Build
       run: |
         flutter pub get
