--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,6 +18,7 @@ jobs:
         flutter-version: '2.0.3'
     - name: Build
       run: |
+        flutter config --enable-linux-desktop
         flutter pub get
         flutter pub run intl_utils:generate
         flutter pub run build_runner build --delete-conflicting-outputs
