--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,6 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Setup GCC
+      uses: egor-tenshin/setup-gcc@v1
+      with:
+        platform: x64
+    - name: Setup Ninja
+      uses: ashutoshvarma/setup-ninja@master
+      with:
+        version: 1.10.2
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
