--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Setup GCC
-      uses: egor-tenshin/setup-gcc@v1
+      uses: egor-tensin/setup-gcc@v1
       with:
         platform: x64
     - name: Setup Ninja
