--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -14,9 +14,7 @@ jobs:
       with:
         platform: x64
     - name: Setup Ninja
-      uses: ashutoshvarma/setup-ninja@master
-      with:
-        version: 1.10.2
+      run: sudo apt-get install -y ninja-build
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
